# ocelot

./: .gitignore  .gitmodules  CMakeLists.txt  djinni  setup.py
cmake/: djinni_generated_files.cmake.in  djinni_process_idl.cmake
idl/: ocelot.djinni
ocelot/: __init__.py
ocelot/optics/: test.py  wave.py
src/: wave.cpp
